# pdf-translator

./: .gitignore  README.md  apple_translate.swift  extract.py  pyproject.toml  test_models.py
