[project]
name = "news-extractor"
version = "0.1.0"
description = "Extract articles from newspaper PDF scans into HTML"
requires-python = ">=3.13"
dependencies = [
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "numpy>=2.4.3",
    "pyyaml>=6.0.3",
    "opencv-python-headless>=4.13.0.92",
    "transformers>=4.40.0,<5.0.0",
    "sentencepiece>=0.2.0",
    "torch>=2.0.0",
    "tiktoken>=0.12.0",
    "protobuf>=7.34.0",
]

[project.scripts]
extract = "extract:main"
